--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,78 @@
 {
   "name": "server",
-  "module": "",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "type": "module",
+  "description": "",
   "scripts": {
-    "build": "tsc",
-    "clean": "rm -fr dist/"
+    "build": "tsc && babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "barrels": "barrelsby --config .barrelsby.json",
+    "start": "babel-watch --extensions .ts src/index.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "4.9.0",
+    "@prisma/client": "^4.9.0",
+    "@tsed/ajv": "^7.13.2",
+    "@tsed/common": "^7.13.2",
+    "@tsed/core": "^7.13.2",
+    "@tsed/di": "^7.13.2",
+    "@tsed/engines": "^7.13.2",
+    "@tsed/exceptions": "^7.13.2",
+    "@tsed/json-mapper": "^7.13.2",
+    "@tsed/logger": "^6.3.3",
+    "@tsed/logger-file": "^6.3.3",
+    "@tsed/openspec": "^7.13.2",
+    "@tsed/platform-cache": "^7.13.2",
+    "@tsed/platform-exceptions": "^7.13.2",
+    "@tsed/platform-express": "^7.13.2",
+    "@tsed/platform-log-middleware": "^7.13.2",
+    "@tsed/platform-middlewares": "^7.13.2",
+    "@tsed/platform-params": "^7.13.2",
+    "@tsed/platform-response-filter": "^7.13.2",
+    "@tsed/platform-views": "^7.13.2",
+    "@tsed/prisma": "^7.13.2",
+    "@tsed/schema": "^7.13.2",
+    "@tsed/swagger": "^7.13.2",
+    "ajv": "^8.12.0",
+    "barrelsby": "^2.5.1",
+    "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
+    "express": "^4.18.2",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.13",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@tsed/cli-plugin-prisma": "4.2.7",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.16",
+    "@types/method-override": "^0.0.32",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
-    "better-sqlite3": "^8.0.1",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "babel-watch": "^7.7.2",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
     "tsconfig-paths": "^4.1.2",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "tsed": {
+    "packageManager": "yarn",
+    "convention": "default",
+    "architecture": "default"
   }
 }
